# Basic-SFML-CMake-Template

./: CMakeLists.txt  README.md  main.cpp  pch.h
